# cyber-offense-and-defense

PortSwiggerLabs/Authentication/Other authentication mechanisms/Brute-forcing a stay-logged-in cookie/solution/: pyproject.toml
PortSwiggerLabs/Authentication/Other authentication mechanisms/Brute-forcing a stay-logged-in cookie/solution/solution/: solution.py
PortSwiggerLabs/SQL injection/Blind/Blind SQL injection with time delays and information retrieval/blind-time-delay-information-retrieval/: pyproject.toml
PortSwiggerLabs/SQL injection/Blind/Blind SQL injection with time delays and information retrieval/blind-time-delay-information-retrieval/blind_time_delay_information_retrieval/: retrieval.py
countermeasures/: 02 - SQL Injection (SQLi).md  03 - Authentication + Business Logic Vulnerabilities.md  04 - Information disclosure + Directory traversal.md  06 - Access control.md  08 - Cross-site scripting (XSS).md  09 - Cross-site request forgery (CSRF).md  10 - Cross-origin resource sharing (CORS) + Clickjacking.md  11 - Insecure deserialization + Server-side template injection.md  12 - OAuth authentication.md  13 - JWT Attacks.md
notes/: 02 - SQL Injection (SQLi).md  03 - Authentication + Business Logic Vulnerabilities.md  04 - Information disclosure + Directory traversal.md  05 - Command injection + File upload vulnerabilities.md  06 - Access control.md  07 - Server-side request forgery (SSRF) + XXE injection.md  08 - Cross-site scripting (XSS).md  09 - Cross-site request forgery (CSRF).md  10 - Cross-origin resource sharing (CORS) + Clickjacking.md  (+3 more)
(+185 files in other folders)
