[project]
name = "solution"
version = "0.1.0"
description = ""
authors = [
    {name = "ilveron",email = "alessandromonetti@outlook.it"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich (>=13.9.4,<14.0.0)",
    "responses (>=0.25.3,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
